Make tables more prettier

--- a/_sass/code.scss
+++ b/_sass/code.scss
@@ -58,8 +58,8 @@
 .highlight .mx { color: #b5cea8 } // Literal.Number.Other
 .highlight .o { color: #d4d4d4 } // Operator
 .highlight .ow { color: #d4d4d4 } // Operator.Word
-.highlight .p { color: #858585 } // Punctuation
-.highlight .pi { color: #858585 } // Punctuation.Indicator
+.highlight .p { color: #9a9a9a } // Punctuation
+.highlight .pi { color: #9a9a9a } // Punctuation.Indicator
 .highlight .c { color: #6A9955 } // Comment
 .highlight .ch { color: #6A9955 } // Comment.Hashbang
 .highlight .cd { color: #6A9955 } // Comment.Doc
