--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
 <title>{% if page.alt_title %}{{ page.alt_title }}{% else %}{{ page.title }}{% endif %}</title>
-<link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,300;0,500;1,300;1,500&amp;family=Fira+Mono&amp;family=Montserrat:ital,wght@0,700;1,700&amp;display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,300;0,500;1,300;1,500&amp;family=Fira+Mono&amp;family=Montserrat:ital,wght@0,600;0,700;1,600;1,700&amp;display=swap" rel="stylesheet">
 
 <link rel="apple-touch-icon" sizes="180x180" href="/assets/icon/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/assets/icon/favicon-32x32.png">
