Use hr in projects page

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -61,6 +61,7 @@ $bullet-font-size: 0.8em;
 
 $highlight-line: 3pt;
 $grey-thickness: 0.12em;
+$hr-thickness: 1.5pt;
 
 @function shadow($width, $height, $color) {
   $output: '';
