--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -375,15 +375,22 @@ table {
 }
 
 div.card {
-  display: inline-block;
+  display: block;
+  margin: 2 * $paragraph-spacing 0;
+
+  >:first-child {
+    margin-top: 0;
+  }
+
+  >:last-child {
+    margin-bottom: 0;
+  }
 }
 
 hr {
-  width: 40%;
-  height: $grey-thickness;
-  border: none;
-  background: $hr-color;
-  margin: 2 * $paragraph-spacing auto;
+  border: solid 0 $lighterer;
+  border-bottom-width: $hr-thickness;
+  margin: 2 * $paragraph-spacing 0;
 }
 
 svg.icon-tabler {
