Add pretty scrollbars on Chrome

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -10,6 +10,9 @@ $active-fg: white;
 $highlight: hsl(193, 30%, 52%);
 $selection-bg: rgba(hsl(193, 30%, 52%), 0.996);
 $selection-fg: black;
+$scrollbar: #3d3d3d;
+$scrollbar-hover: #4c4c4c;
+$scrollbar-active: #5c5c5c;
 
 $font-family: "Crimson Pro", Georgia, Cambria, "Times New Roman", Times, serif;
 $font-weight: 300;
