--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -459,3 +459,77 @@ meter {
     background: $highlight;
   }
 }
+
+::-webkit-scrollbar, ::-webkit-scrollbar-corner {
+  background: $background;
+}
+
+::-webkit-scrollbar-thumb {
+  color: $scrollbar;
+
+  &:hover {
+    color: $scrollbar-hover;
+  }
+
+  &:active {
+    color: $scrollbar-active;
+  }
+
+  &:vertical {
+    background-image: linear-gradient(90deg, transparent 11.764%, currentColor 11.764%, currentColor 88.236%, transparent 88.236%);
+  }
+
+  &:horizontal {
+    background-image: linear-gradient(0deg, transparent 11.764%, currentColor 11.764%, currentColor 88.236%, transparent 88.236%);
+  }
+}
+
+::-webkit-scrollbar-button:single-button {
+  color: $background;
+  background-color: $scrollbar-active;
+
+  &:hover {
+    color: $lighterer;
+  }
+
+  &:active {
+    color: $scrollbar-active;
+    background-color: $background;
+  }
+
+  &:vertical {
+    &:decrement {
+      background-image:
+        linear-gradient(135deg, currentColor 45.588%, transparent 45.588%),
+        linear-gradient(-135deg, currentColor 45.588%, transparent 45.588%),
+        linear-gradient(0deg, currentColor 35.294%, transparent 35.294%);
+      background-position: top left, top right, bottom;
+    }
+
+    &:increment {
+      background-image:
+        linear-gradient(45deg, currentColor 45.588%, transparent 45.588%),
+        linear-gradient(-45deg, currentColor 45.588%, transparent 45.588%),
+        linear-gradient(180deg, currentColor 35.294%, transparent 35.294%);
+      background-position: bottom left, bottom right, top;
+    }
+  }
+
+  &:horizontal {
+    &:decrement {
+      background-image:
+        linear-gradient(45deg, currentColor 42.647%, transparent 42.647%),
+        linear-gradient(135deg, currentColor 42.647%, transparent 42.647%),
+        linear-gradient(-90deg, currentColor 41.176%, transparent 41.176%);
+      background-position: bottom left, top left, right;
+    }
+
+    &:increment {
+      background-image:
+        linear-gradient(-45deg, currentColor 42.647%, transparent 42.647%),
+        linear-gradient(-135deg, currentColor 42.647%, transparent 42.647%),
+        linear-gradient(90deg, currentColor 41.176%, transparent 41.176%);
+      background-position: bottom right, top right, left;
+    }
+  }
+}
